--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap');
+
 html{
   font-family: 'Merriweather Sans', sans-serif;
+}
+
+
+::-webkit-scrollbar{
+  width:0px;
 }
